--- a/index.html
+++ b/index.html
@@ -582,6 +582,29 @@ Conditional process analysis is a modeling strategy undertaken with the goal of<
 </div>
 </div>
 </section>
+<section id="what-is-mediation-in-research" class="slide level2">
+<h2>What is Mediation in Research?</h2>
+<div class="fragment fade-up">
+<div class="fragment highlight-red">
+<p><strong>Definition</strong>: A mediation variable explains the “<em>why</em>” and “<em>how</em>” relationship between the independent variable (X) and the dependent variable (Y). In other words, <strong><em>mediation contextualizes the reason for the effect</em></strong>.</p>
+</div>
+</div>
+<div class="fragment fade-up">
+<p>In mediation analysis, the independent variable does not infer directly the dependent variable but rather through a third variable mediator or “<strong><em>middleman</em></strong>” between the two. In other words, if we remove the mediator variable, the causal effect between X and Y variables will cease to exist.</p>
+</div>
+<div class="fragment fade-up">
+<p>A mediated model consists of two paths respectively the <strong>direct effect</strong> path (path A) between X and Y and the <strong>indirect effect</strong> path (path B and C) respectively from X → Me → Y as seen in the following figure.</p>
+</div>
+<div class="fragment fade-up">
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="images/model4_concept.png"></p>
+</div><div class="column" style="width:50%;">
+<p><img data-src="images/model4_stats.png"></p>
+</div>
+</div>
+</div>
+</section>
 <section id="module-1" class="slide level2">
 <h2>Module 1</h2>
 <p>Model 1a - One Moderator (Basic Moderation) - Continuous Moderator</p>
@@ -607,6 +630,7 @@ Conditional process analysis is a modeling strategy undertaken with the goal of<
 </div>
 </div>
 </div>
+<p>Dataset: <code>Jose_2013_data.sav</code></p>
 </div>
 <div class="fragment">
 <div class="columns">
